--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <head>
+    <meta http-equiv="Refresh" content="0; URL=/firstcondition/" />
 </head>
 <body>
-hello
 </body>
-</html>
