--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>First required condition</title>
+    <title>Первое необходимое условие</title>
     <link href="/firstcondition/css/custom.css" rel="stylesheet">
     <script type="application/javascript" src="/firstcondition/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script type="application/javascript" src="/firstcondition/js/jquery-3.7.1.min.js"></script>
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/firstcondition/">English</a>
+                    <a class="nav-link " aria-current="page" href="/firstcondition/">English</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/firstcondition/ru/">Russian</a>
+                    <a class="nav-link active" href="/firstcondition/ru/">Russian</a>
                 </li>
             </ul>
         </div>
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="row g-5">
         <div class="col-md-8">
-            <h3 class="pb-4 mb-4 border-bottom">First required condition</h3>
+            <h3 class="pb-4 mb-4 border-bottom">Первое необходимое условие</h3>
             <article class="blog-post">
                 <p>Мы наблюдаем за изменением подхода к новогоднему поздравлению владимира путина в декабре 22 года по
                     сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по
@@ -117,11 +117,11 @@
 <div class="px-4 py-5 my-5 text-center bg-body-secondary rounded object-fit-contain"
      style="height: 800px;  background-repeat: repeat; background-image: url('/firstcondition/img/chess.jpg');"
      id="game">
-    <h1 class="display-5 fw-bold text-white text-body-emphasis">First required condition</h1>
+    <h1 class="display-5 fw-bold text-white text-body-emphasis">Первое необходимое условие</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4 text-body-emphasis"></p>
         <p class="lead mb-4 text-body-emphasis">
-Please allow access to your web camera for better experience. We are not recording your image.
+Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
 </p>
         <div class="d-grid gap-2 my-2 d-sm-flex justify-content-sm-center">
             <button type="button" class="btn btn-danger btn-lg px-4 gap-3" id="run">
