--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -24,6 +24,29 @@
         </div>
     </div>
 </nav>
+<div style="position: fixed; top: 60px; right: 230px;" id="buttoncontainer">
+    <button type="button" class="btn btn-danger btn-lg px-4 gap-3" id="run">
+        <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor"
+             class="bi bi-play-circle" viewBox="0 0 16 16">
+            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+            <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
+        </svg>
+        Run game
+    </button>
+</div>
+<div class="px-4 py-5 my-1 text-center bg-body-secondary rounded object-fit-contain"
+     style="height: 770px;  background-repeat: repeat; background-image: url('/firstcondition/img/SMPTE_Color_Bars.svg');"
+     id="game">
+    <h1 class="display-10 fw-bold text-white text-body-emphasis">Первое необходимое условие</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4 text-body-emphasis text-bg-vsrato">
+Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
+</p>
+        <p class="lead mb-4 text-body-emphasis text-bg-vsrato">
+Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
+</p>
+    </div>
+</div>
 
 <div class="container">
     <div class="row g-5">
@@ -114,31 +137,10 @@
         </div>
     </div>
 </div>
-<div class="px-4 py-5 my-5 text-center bg-body-secondary rounded object-fit-contain"
-     style="height: 800px;  background-repeat: repeat; background-image: url('/firstcondition/img/chess.jpg');"
-     id="game">
-    <h1 class="display-5 fw-bold text-white text-body-emphasis">Первое необходимое условие</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4 text-body-emphasis"></p>
-        <p class="lead mb-4 text-body-emphasis">
-Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
-</p>
-        <div class="d-grid gap-2 my-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-danger btn-lg px-4 gap-3" id="run">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                     class="bi bi-play-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-                    <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445"/>
-                </svg>
-                Run game
-            </button>
-        </div>
-    </div>
-</div>
 <footer class="py-3 my-4">
     <ul></ul>
-    <p class="text-center text-muted">© 2023 Art-group BBB / Mad hutter game production plant: Marina Blinova, Alexey
-        Boriskin, Valery Belov</p>
+    <p class="text-center text-muted" >© 2023 Art-group მმმ / Mad hutter game production plant: Valery Belov, Marina Blinova, Alexey Boriskin. </p>
+    <p class="text-center text-muted">В игре были использованы: 3D-модели: sketchfab.com, sound: freesound.org и stableaudio.com</p>
 </footer>
 </body>
 </html>
