--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Первое необходимое условие</title>
     <link href="/firstcondition/css/custom.css" rel="stylesheet">
-    <script type="application/javascript" src="/firstcondition/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script type="application/javascript" src="/firstcondition/js/bootstrap.bundle.js"></script>
     <script type="application/javascript" src="/firstcondition/js/jquery-3.7.1.min.js"></script>
     <script type="application/javascript" src="/firstcondition/js/custom.js"></script>
 </head>
@@ -24,7 +24,7 @@
         </div>
     </div>
 </nav>
-<div style="position: fixed; top: 60px; right: 230px;" id="buttoncontainer">
+<div style="position: fixed; top: 60px; left: 50%; transform: translate(-50%, 0);" id="buttoncontainer">
     <button type="button" class="btn btn-danger btn-lg px-4 gap-3" id="run">
         <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor"
              class="bi bi-play-circle" viewBox="0 0 16 16">
@@ -39,10 +39,10 @@
      id="game">
     <h1 class="display-10 fw-bold text-white text-body-emphasis">Первое необходимое условие</h1>
     <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4 text-body-emphasis text-bg-vsrato">
+        <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
 Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
 </p>
-        <p class="lead mb-4 text-body-emphasis text-bg-vsrato">
+        <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
 Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
 </p>
     </div>
