--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -37,7 +37,7 @@
 <div class="px-4 py-5 my-1 text-center bg-body-secondary rounded object-fit-contain"
      style="height: 770px;  background-repeat: repeat; background-image: url('/firstcondition/img/SMPTE_Color_Bars.svg');"
      id="game">
-    <h1 class="display-10 fw-bold text-white text-body-emphasis">Первое необходимое условие</h1>
+    <h1 class="display-10 fw-bold text-white text-body-emphasis maintitle">Первое необходимое условие</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
 Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
