--- a/firstcondition/unity/2scenestest/index.html
+++ b/firstcondition/unity/2scenestest/index.html
@@ -57,12 +57,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2scenestest.loader.js";
+      var loaderUrl = buildUrl + "/test_final2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/2scenestest.data",
-        frameworkUrl: buildUrl + "/2scenestest.framework.js",
-        codeUrl: buildUrl + "/2scenestest.wasm",
+        dataUrl: buildUrl + "/test_final2.data",
+        frameworkUrl: buildUrl + "/test_final2.framework.js",
+        codeUrl: buildUrl + "/test_final2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "BBB",
         productName: "v1",
