add phrase about mobile version

--- a/firstcondition/index.html
+++ b/firstcondition/index.html
@@ -40,7 +40,7 @@
     <h1 class="display-14 fw-bold text-white text-body-emphasis maintitle">First required condition</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
-An art game about magic and politics. Controls: WASD + mouse.
+An art game about magic and politics. Controls: WASD + mouse. The game will not run on mobile devices.
 </p>
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
 Please allow access to your web camera for better experience. We are not recording your image.
