--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -40,7 +40,7 @@
     <h1 class="display-10 fw-bold text-white text-body-emphasis maintitle">Первое необходимое условие</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
-Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
+Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад. Мобильные устройства пока не поддерживаются.
 </p>
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">
 Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
