--- a/firstcondition/index.html
+++ b/firstcondition/index.html
@@ -139,7 +139,9 @@ Please allow access to your web camera for better experience. We are not recordi
 </div>
 <footer class="py-3 my-4">
     <ul></ul>
-    <p class="text-center text-muted" >© 2023 Art-group მმმ / Mad hutter game production plant: Valery Belov, Marina Blinova, Alexey Boriskin. </p>
+    <p class="text-center text-muted">© 2023 Art-group მმმ / Game production plant: <a href="https://www.instagram.com/valergenadich/" class="link-light" target="_blank">Valery Belov</a>,
+        <a href="https://www.instagram.com/th_c_d/" class="link-light" target="_blank">Marina Blinova</a>, <a href="https://www.instagram.com/voidus/" class="link-light" target="_blank">Alexey Boriskin</a>.</p>
+    
     <p class="text-center text-muted">In game we have used 3D-modes: sketchfab.com, sounds: freesound.org and stableaudio.com</p>
 </footer>
 </body>
