--- a/firstcondition/index.html
+++ b/firstcondition/index.html
@@ -53,63 +53,26 @@ Please allow access to your web camera for better experience. We are not recordi
         <div class="col-md-8">
             <h3 class="pb-4 mb-4 border-bottom">First required condition</h3>
             <article class="blog-post">
-                <p>Мы наблюдаем за изменением подхода к новогоднему поздравлению владимира путина в декабре 22 года по
-                    сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по
-                    классическому канону: в кадре было тело президента и символы государственной власти - куранты,
-                    кремль, флаг,
-                    гимн, спасская башня. Эта традиция означала бесконечное повторение настоящего через обращение и
-                    эксплуатацию
-                    прошлого: мелодии советского гимна, советской традиции поздравлений генсеков, царского имперского
-                    герба с
-                    двуглавым орлом. В 22 году, году начала полномасштабного вторжения россии в украину, произошёл слом,
-                    в том
-                    числе и властных ритуалов – новогоднее обращение было записано на фоне людей в форме. Обращаясь к
-                    теории
-                    "двух тел короля", нам кажется, что тело властное, идеологическое окончательно обветшало и
-                    обнаружило свою
-                    пустотность, стало призраком.
-                </p>
-                <p>
-                    Отсюда стремление путина закрепиться в теле "обычном", размножив его в иных телах. Мы видим это как
-                    переход
-                    от символической власти к власти телесной, что подтверждается также репрессиями в отношении
-                    транс-персон,
-                    лгбт-сообщества, постепенным введением запрета абортов, возвращением спортивных парадов на красную
-                    площадь -
-                    то есть в целом возвращении фукольдианской биовласти. Мы хотели бы рассмотреть этот переход от
-                    символической
-                    власти к телесной через оптику хонтологии, науки призраков. На наш взгляд, мы имеем дело с двумя
-                    призраками:
-                    с призраком бесконечно продолжающегося настоящего через эксплуатацию прошлого, связанным с
-                    предыдущей
-                    традицией тела-курантов, и с призраком (якобы) вечно живого тела, которое пытается зацепиться за
-                    иные тела в
-                    попытке отменить или отсрочить собственную смерть, обращаясь к телесной биовласти.
-                </p>
-                <p>
-                    В призраках власти "Деррида" называет два основных способа изгнания призраков: экзорцизм в прошлое и
-                    проекция в
-                    будущее. Первый
-                    подразумевает объявление призрака не более чем иллюзией/воспоминанием. Второй же принимает призрака
-                    как
-                    конкретный план, нечто, подлежащее воплощению; призрак рассеивается, когда задание выполнено.
-                    Предоставляя
-                    набор абстрактных магических артефактов, мы не даём зрителю конкретных указаний, как именно можно
-                    призвать
-                    призрак смерти, но предлагаем поверить, что это возможно.
+                
+<p>
+    In 2022, there is a radical change in an approach Valimir Putin presents himself at New Year's greetings. Before 2022, the greeting, a very important symbolic ritual, was set according to a classic canon. There was the Kremlin Clock, the Kremlin, flag, the national anthem, and the Moscow Clock Tower. This tradition meant an infinite repetition of the present through exploitation of the past: the melody of the anthem, soviet tradition of New Year's greetings by Secretary Generals, double-headed eagle of the Tsarist Russian Empire. In 2022, the year of the russian full-scale invasion into Ukraine, there was a rupture in everything, including rituals of power: the New Year's greetings were recorded in front of the people in military uniform. Later it was found that they were not actual soldiers, but rather Federal Protective Service officers, but that fact remained hidden from the wider audience.
+</p>
+<p>
+    In this context, we want to refer to The King's Two Bodies theory. It seems that the <em>body politic</em> of Vladimir Putin is decaying and revealing its hollowness, becoming a specter.
+</p>
+<p>
+    Hence Putin's pursuit to secure himself in <em>body natural</em>, multiplying it in others' bodies. We see it as the transition from the symbolic power to the bodily power, as it can be confirmed by repressions towards transpersons and LGBT community as a whole, gradual prohibition of abortions, return of athletes parades on the Red Square. All of that can be described as the return of Foucauldian biopower. Considering this transition from symbolic power to the biopower through the lens of hauntology, we deal with the two specters: the specter of infinitely continuing present through the exploitation of the past, and the specter of preudo-eternal living body, which tries to hang on other's bodies in the attempt to cancel or postpone its own death.
+</p>
+<p>
+    In "Specters of Marx" Derrida names two main ways of exorcizing ghosts: exorcism into the past and projection into the future, without specifying which one of them is sufficient.
+</p>
+<p>
+    From our point of view, the specter of the future bloody corporality doesn't have an independent essence, but embodies another way of prolongation of the specter of the past, which produces an endless present due to the exploitation of the future. However, it is at this moment of rupture that you can catch the chimera by the tail and break the repetition function, looping it on itself.
+</p>
+<p>
+    In the magic training simulator we provide a set of abstract artifacts where you can look for forks in the past that would lead somewhere else. But we also provide enough tools for the ideological body to reveal its hollowness.
+</p>
 
-
-                    Нам нужно изгнать призрака прошлого чтобы призракологическая традиция фальсификации настоящего не
-                    повторялась и не давала индульгенцию призраку будущего
-
-                    мы не даём зрителю конкретных указаний, однако в этом магическом ритуале существует некоторая
-                    комбинация
-                    предметов, которая позволяет выполнить необходимое по деррида условие при котором задание будет
-                    выполнено. возможно некоторые иные случайности и развилки в постсоветской истории " могли бы
-                    прервать
-                    повторение, а
-                    возможно необходим иной ход.
-                </p>
             </article>
         </div>
         <div class="col-md-4">
@@ -141,7 +104,6 @@ Please allow access to your web camera for better experience. We are not recordi
     <ul></ul>
     <p class="text-center text-muted">© 2023 Art-group მმმ / Game production plant: <a href="https://www.instagram.com/valergenadich/" class="link-light" target="_blank">Valery Belov</a>,
         <a href="https://www.instagram.com/th_c_d/" class="link-light" target="_blank">Marina Blinova</a>, <a href="https://www.instagram.com/voidus/" class="link-light" target="_blank">Alexey Boriskin</a>.</p>
-    
     <p class="text-center text-muted">In game we have used 3D-modes: sketchfab.com, sounds: freesound.org and stableaudio.com</p>
 </footer>
 </body>
