--- a/firstcondition/ru/index.html
+++ b/firstcondition/ru/index.html
@@ -53,63 +53,23 @@
         <div class="col-md-8">
             <h3 class="pb-4 mb-4 border-bottom">Первое необходимое условие</h3>
             <article class="blog-post">
-                <p>Мы наблюдаем за изменением подхода к новогоднему поздравлению владимира путина в декабре 22 года по
-                    сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по
-                    классическому канону: в кадре было тело президента и символы государственной власти - куранты,
-                    кремль, флаг,
-                    гимн, спасская башня. Эта традиция означала бесконечное повторение настоящего через обращение и
-                    эксплуатацию
-                    прошлого: мелодии советского гимна, советской традиции поздравлений генсеков, царского имперского
-                    герба с
-                    двуглавым орлом. В 22 году, году начала полномасштабного вторжения россии в украину, произошёл слом,
-                    в том
-                    числе и властных ритуалов – новогоднее обращение было записано на фоне людей в форме. Обращаясь к
-                    теории
-                    "двух тел короля", нам кажется, что тело властное, идеологическое окончательно обветшало и
-                    обнаружило свою
-                    пустотность, стало призраком.
-                </p>
-                <p>
-                    Отсюда стремление путина закрепиться в теле "обычном", размножив его в иных телах. Мы видим это как
-                    переход
-                    от символической власти к власти телесной, что подтверждается также репрессиями в отношении
-                    транс-персон,
-                    лгбт-сообщества, постепенным введением запрета абортов, возвращением спортивных парадов на красную
-                    площадь -
-                    то есть в целом возвращении фукольдианской биовласти. Мы хотели бы рассмотреть этот переход от
-                    символической
-                    власти к телесной через оптику хонтологии, науки призраков. На наш взгляд, мы имеем дело с двумя
-                    призраками:
-                    с призраком бесконечно продолжающегося настоящего через эксплуатацию прошлого, связанным с
-                    предыдущей
-                    традицией тела-курантов, и с призраком (якобы) вечно живого тела, которое пытается зацепиться за
-                    иные тела в
-                    попытке отменить или отсрочить собственную смерть, обращаясь к телесной биовласти.
-                </p>
-                <p>
-                    В призраках власти "Деррида" называет два основных способа изгнания призраков: экзорцизм в прошлое и
-                    проекция в
-                    будущее. Первый
-                    подразумевает объявление призрака не более чем иллюзией/воспоминанием. Второй же принимает призрака
-                    как
-                    конкретный план, нечто, подлежащее воплощению; призрак рассеивается, когда задание выполнено.
-                    Предоставляя
-                    набор абстрактных магических артефактов, мы не даём зрителю конкретных указаний, как именно можно
-                    призвать
-                    призрак смерти, но предлагаем поверить, что это возможно.
+                
+<p>
+	В декабре 22 года изменился подход к новогоднему поздравлению Владимира Путина по сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по классическому канону: в кадре было тело президента и символы государственной власти - куранты, кремль, флаг, гимн, спасская башня. Эта традиция означала бесконечное повторение настоящего через обращение и эксплуатацию прошлого: мелодии советского гимна, советской традиции поздравлений генсеков, царского имперского герба с двуглавым орлом. В 22 году, году начала полномасштабного вторжения россии в украину, произошёл слом в том числе и властных ритуалов – новогоднее обращение было записано на фоне людей в форме. Обращаясь к теории "двух тел короля", нам кажется, что тело властное, идеологическое окончательно обветшало и обнаружило свою пустотность, стало призраком.
+</p>
+<p>
+	Отсюда стремление Путина закрепиться в теле "обычном", размножив его в иных телах. Мы видим это как переход от символической власти к власти телесной, что подтверждается также репрессиями в отношении транс-персон, лгбт-сообщества в целом, постепенным введением запрета абортов, возвращением спортивных парадов на красную площадь - то есть в целом возвращении фукольдианской биовласти. Рассматривая этот переход от символической власти к телесной через оптику хонтологии (призракологии), мы имеем дело с двумя призраками: с призраком бесконечно продолжающегося настоящего через эксплуатацию прошлого, связанным с предыдущей традицией тела-курантов, и с призраком (якобы) вечно живого тела, которое пытается зацепиться за иные тела в попытке отменить или отсрочить собственную смерть.
+</p>
+<p>
+	В "Призраках Маркса" Деррида называет два основных способа изгнания призраков: экзорцизм в прошлое и проекция в будущее, не уточняя, является ли один из них достаточным.
+</p>
+<p>
+	С нашей точки зрения, призрак будущей кровавой телесности не имеет самостоятельной сущности, а является иным способом продолжения призрака прошлого, продуцирующего бесконечное настоящее за счёт эксплуатации будущего. Тем не менее, именно на этом моменте разлома можно поймать химеру за хвост, и сломать функцию повторения, зациклив её на себя.
+</p>
+<p>
+	В магическом тренажёре мы предоставляем набор абстрактных артефактов, где можно поискать развилки прошлого, которые бы привели куда-то ещё. Но также даём и достаточное количество инструментов, чтобы идеологическое тело обнаружило свою пустотность.
+</p>
 
-
-                    Нам нужно изгнать призрака прошлого чтобы призракологическая традиция фальсификации настоящего не
-                    повторялась и не давала индульгенцию призраку будущего
-
-                    мы не даём зрителю конкретных указаний, однако в этом магическом ритуале существует некоторая
-                    комбинация
-                    предметов, которая позволяет выполнить необходимое по деррида условие при котором задание будет
-                    выполнено. возможно некоторые иные случайности и развилки в постсоветской истории " могли бы
-                    прервать
-                    повторение, а
-                    возможно необходим иной ход.
-                </p>
             </article>
         </div>
         <div class="col-md-4">
@@ -141,7 +101,6 @@
     <ul></ul>
     <p class="text-center text-muted">© 2023 Art-group მმმ / Game production plant: <a href="https://www.instagram.com/valergenadich/" class="link-light" target="_blank">Valery Belov</a>,
         <a href="https://www.instagram.com/th_c_d/" class="link-light" target="_blank">Marina Blinova</a>, <a href="https://www.instagram.com/voidus/" class="link-light" target="_blank">Alexey Boriskin</a>.</p>
-    
     <p class="text-center text-muted">В игре были использованы: 3D-модели: sketchfab.com, sound: freesound.org и stableaudio.com</p>
 </footer>
 </body>
